implemented functions updated

--- a/docs/filters.ipynb
+++ b/docs/filters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -62,63 +62,21 @@
        "      <td>None</td>\n",
        "      <td>Set</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Root</td>\n",
-       "      <td>AnalyzeModel</td>\n",
-       "      <td>False</td>\n",
-       "      <td>File</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Root</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Set</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Root</td>\n",
-       "      <td>CloseSTAADFile</td>\n",
-       "      <td>False</td>\n",
-       "      <td>File</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Root</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Set</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Root</td>\n",
-       "      <td>CreateNamedView</td>\n",
-       "      <td>False</td>\n",
-       "      <td>File</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Root</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Set</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Api_Call         Function  Implemented Module  Priority Staad_Module  \\\n",
-       "0     Root          Analyze        False   File       0.0         Root   \n",
-       "1     Root        AnalyzeEx        False   File       0.0         Root   \n",
-       "2     Root     AnalyzeModel        False   File       0.0         Root   \n",
-       "3     Root   CloseSTAADFile        False   File       0.0         Root   \n",
-       "4     Root  CreateNamedView        False   File       0.0         Root   \n",
+       "  Api_Call   Function  Implemented Module  Priority Staad_Module  \\\n",
+       "0     Root    Analyze        False   File       0.0         Root   \n",
+       "1     Root  AnalyzeEx        False   File       0.0         Root   \n",
        "\n",
        "  Staad_Sub_Module Sub_Module Type  \n",
        "0             None       None  Set  \n",
-       "1             None       None  Set  \n",
-       "2             None       None  Set  \n",
-       "3             None       None  Set  \n",
-       "4             None       None  Set  "
+       "1             None       None  Set  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,31 +84,96 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "## read the Functions.json file\n",
-    "\n",
     "df = pd.read_json('Functions.json')\n",
-    "df.head()"
+    "df.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Staad_Module</th>\n",
+       "      <th>Function</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Root</td>\n",
+       "      <td>GetAnalysisStatus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Root</td>\n",
+       "      <td>GetApplicationVersion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Root</td>\n",
+       "      <td>GetBaseUnit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Root</td>\n",
+       "      <td>GetInputUnitForForce</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Root</td>\n",
+       "      <td>GetInputUnitForLength</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array(['Root', 'Geometry', 'Property', 'Support', 'Load', 'Table', 'View',\n",
-       "       'Output', 'Commands'], dtype=object)"
+       "   Staad_Module               Function\n",
+       "5          Root      GetAnalysisStatus\n",
+       "6          Root  GetApplicationVersion\n",
+       "7          Root            GetBaseUnit\n",
+       "11         Root   GetInputUnitForForce\n",
+       "12         Root  GetInputUnitForLength"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['Api_Call'].unique()"
+    "implemented = df[['Staad_Module','Function']][df['Implemented']]\n",
+    "implemented.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "implemented.to_markdown('implemented.md',index=False)"
    ]
   }
  ],
